# xpdite-scraper

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  web_ui.py  web_ui_temp.py
scrape/: ad.py  ddg.py  er2.py  er_diagram_visualization.py  play.py  q.py  rweb.py  rweb2.py  rweb3.py  scraper.py  t.py
static/: app.js  index.html  styles.css
