[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xpdites"
version = "0.1.0"
description = "Webscraper TUI"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "browserforge>=1.2.4",
    "camoufox[geoip]>=0.4.11",
    "crawl4ai>=0.8.0",
    "curl-cffi>=0.14.0",
    "markdownify>=1.2.2",
    "nodriver>=0.48.1",
    "pillow>=10.4.0",
    "playwright>=1.58.0",
    "questionary>=2.1.1",
    "rich>=14.3.2",
    "streamlit>=1.55.0",
    "surya-ocr>=0.17.1",
    "trafilatura>=2.0.0",
    "twikit>=2.3.3",
]

[project.scripts]
XpditeS = "scrape.scraper:main"

[tool.hatch.build.targets.wheel]
packages = ["scrape"]

[dependency-groups]
dev = [
    "beautifulsoup4>=4.14.3",
    "browserforge>=1.2.4",
    "camoufox[geoip]>=0.4.11",
    "crawl4ai>=0.8.0",
    "curl-cffi>=0.14.0",
    "markdownify>=1.2.2",
    "nodriver>=0.48.1",
    "pillow>=10.4.0",
    "playwright>=1.58.0",
    "questionary>=2.1.1",
    "rich>=14.3.2",
    "surya-ocr>=0.17.1",
    "trafilatura>=2.0.0",
    "twikit>=2.3.3",
]
